# grpc

./: Grpc.sln  readme.md
Client/: Client.csproj  Program.cs  readme.md
Common/: Common.csproj  Example.proto  readme.md
Server/: Program.cs  Server.csproj  readme.md
Server/Services/: EventGeneratorService.cs
dotnet/: readme.md
dotnet/Client/: Client.csproj  Program.cs  readme.md
dotnet/Server/: Program.cs  Server.csproj  readme.md
dotnet/Server/Services/: ExampleService.cs
rust/: .gitignore  Cargo.toml  build.rs  readme.md  server.key  server.pem
rust/src/: client.rs  server.rs
